@@ -24,9 +24,15 @@ def main(conf_dir, pid_dir, log_dir, action):
             # We are using a version that understands PYTHONDONTWRITEBYTECODE
             # so it is safe to use imp.load_source here - otherwise we create
             # "pyc"-like files in /etc/gunicorn.d which we then try and parse.
-            CONFIG = imp.load_source(filename, filename).CONFIG
+            module = imp.load_source(filename, filename)
+            CONFIG = getattr(module, 'CONFIG', None)
         else:
-            exec open(filename).read()
+            module = {}
+            execfile(filename, module)
+            CONFIG = module.get('CONFIG')
+
+        if not CONFIG:
+            continue
 
         config = Config(filename, pid_dir, log_dir, CONFIG)
 
